Sync with master 2.19.1.